# dynamic-pricing-ai-IRWA_PROJECT

./: $null  .env  .env.example  .git-commit-msg.txt  .gitignore  .tmp_query_messages.py  .tmp_test_llm.py  3.0  AGENTS.md  AGENT_GUIDE.md  AGENT_TRACKING_ANALYSIS.md  AI_COMMIT_README.md  AUTH_PAGE_THEME.md  AUTH_THEME_SUMMARY.md  AUTONOMOUS_DATA_COLLECTOR_COMPLETE.md  CHAT_INTERFACE_FEATURES.md  COMMIT_MESSAGE.txt  COMMIT_MSG.txt  COMMIT_d75b55c4_INVESTIGATION.md  DEBUG_QUICK_REFERENCE.md  DEMO_GUIDE.md  EMPTY_THREAD_PREVENTION_IMPL.md  GLOBAL_THEME_SYSTEM.md  Get-ProjectTree.ps1  LICENSE  LLM_CONNECTION_ANALYSIS_CORRECTED.md  LLM_FRIENDLY_CODEBASE_RESEARCH.md  MULTI_PAGE_IMPLEMENTATION.md  POA_DEMO_GUIDE.md  PRICES_PANEL_FEASIBILITY.md  README.md  SELF_HEALING_QUICK_REF.md  SUBMISSION_PACKAGE_MANIFEST.txt  TEST_PROMPTS.md  UI_INTEGRATION_ANALYSIS.md  VIVA_BATTLE_TESTED_PROMPTS.md  VIVA_DEMO_GUIDE.md  VIVA_DEMO_PROMPTS.md  VIVA_FINAL_STATUS.md  VIVA_READING_GUIDE.md  (+119 more)
.obsidian/: workspace.json
.recycle_bin/: AgentBadge.tsx  LiveStatus.tsx  config_legacy.py  temp_diff.patch
ai_commit/: __init__.py  cli.py  git_context.py  prompt.py  pytest.ini  validator.py
api/: main.py
app/: __init__.py  _cookies.py  alert.db  data.db-shm  data.db-wal  data.db.old  env_bootstrap.py  llm_client.py  session_utils.py  streamlit_app.py
backend/: Server.js  __init__.py  deps.py  main.py  test_auth_settings_api.py  test_catalog_delete_api.py  test_chat_api.py
bundle_20250829_130618_limit30000/: BUNDLE_SUMMARY.txt  project_code_bundle_part1.txt  project_code_bundle_part10.txt  project_code_bundle_part11.txt  project_code_bundle_part12.txt  project_code_bundle_part2.txt  project_code_bundle_part3.txt  project_code_bundle_part4.txt  project_code_bundle_part5.txt  project_code_bundle_part6.txt  project_code_bundle_part7.txt  project_code_bundle_part8.txt  project_code_bundle_part9.txt
bundle_20250829_165800_limit25000/: BUNDLE_SUMMARY.txt  project_code_bundle_part1.txt  project_code_bundle_part2.txt  project_code_bundle_part3.txt  project_code_bundle_part4.txt
bundle_20250829_181514_limit30000/: BUNDLE_SUMMARY.txt  project_code_bundle_part1.txt  project_code_bundle_part2.txt
bundle_20250829_194008_limit30000/: BUNDLE_SUMMARY.txt  project_code_bundle_part1.txt  project_code_bundle_part2.txt  project_code_bundle_part3.txt  (+4 more)
(+1794 files in other folders)
